--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,9 +1,15 @@
-<h1>hello </h1>
-
-<title>Restaurants</title>
-
-<% @restaurant.each do |restaurant|%>
-<% restaurant.index%>
-<%end%>
-
-<%= link_to(@restaurant, path) %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+      <h1>All restaurants</h1>
+      <ul class="list-group">
+        <% @restaurants.each do |restaurant| %>
+          <li class="list-group-item">
+            <%= link_to restaurant.name, restaurant_path(restaurant) %>
+          </li>
+        <% end %>
+      </ul>
+      <%= link_to "Add a new Restaurant", new_restaurant_path, class: 'btn btn-info' %>
+    </div>
+  </div>
+</div>
